Fix flexible width for dialogue, fix dark mode on button hover

--- a/src/renderer/components/Dialog/styles.module.scss
+++ b/src/renderer/components/Dialog/styles.module.scss
@@ -12,8 +12,10 @@ $paddingVertical: 20px;
   margin: 0;
   max-height: calc(100vh - 50px);
   max-width: 90vw;
+  min-width: 350px;
   overflow: hidden;
   padding: 0;
+  width: unset;
 
   &.fixed {
     position: absolute;
@@ -126,11 +128,13 @@ $paddingVertical: 20px;
 }
 
 .footerActionButton {
+  align-items: center;
   background-color: transparent;
-  border: 0;
   border-radius: 5px;
+  border: 0;
   color: var(--colorPrimary);
   cursor: pointer;
+  display: flex;
   font-size: initial;
   font-weight: bold;
   letter-spacing: 2px;
@@ -138,7 +142,7 @@ $paddingVertical: 20px;
   text-transform: uppercase;
 
   &:hover {
-    background-color: #f1f1f1;
+    background-color: var(--chatListItemBgHover);
   }
 
   &:disabled {
